--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
-test
-<br>
-<a href="/test/">test</a>
+<script type="text/javascript">
+      const authData = { data: "Auth on my site" };
+    WavesKeeper.auth(authData)
+        .then(auth => {
+            console.log(auth); //displaying the result on the console
+            /*...processing data */
+        }).catch(error => {
+            console.error(error); // displaying the result on the console
+            /*...processing errors */
+        })
+</script>
