--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-<script type="text/javascript">
-      const authData = { data: "Auth on my site" };
-    console.log(authData);
-      console.log(window.WavesKeeper);
+<!DOCTYPE html>
+<html>
+<body onload="myFunction()">
+
+<h1>Hello World!</h1>
+
+<script>
+function myFunction() {
+  console.log(WavesKeeper);
+}
 </script>
+
+</body>
+</html>
