--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
-<body onload="myFunction()">
+<body onload="init()">
 
 <h1>Hello World!</h1>
 
 <script>
-function myFunction() {
-  console.log(WavesKeeper);
+function init() {
+  WavesKeeper.initialPromise
+        .then((keeperApi) => {
+            /*...init app*/
+            keeperApi.publicState().then( state => startApp(state));
+        })
+}
+  
+function startApp(state) {
+  console.log(state);
 }
 </script>
 
