--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fetch-jsonp/1.0.6/fetch-jsonp.min.js"></script>
 <body onload="init()">
 
 <h1>Hello World!</h1>
@@ -15,6 +16,9 @@ function init() {
   
 function startApp(state) {
   console.log(state);
+  fetchJsonp('https://nodes.wavesnodes.com/assets/balance/3PFB8YbGPnoiCoXhbsEdWTEHCgXBsxEawLB/BeY7zeP7S5srYoK9avnsNhJXQHaUMNeGiKyYnrPvfeWg')
+  .then(res => res.json())
+  .then(json => console.log(json));
 }
 </script>
 
