Added about page

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 
                 
                 <ul class="main-nav nav navbar-nav navbar-right" id="main-nav">
-                    <li><a href="/">Home</a></li>
+					<li><a href="/">Home</a></li>
+					<li><a href="/about">About</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
                 
