--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,7 @@
                 
                 <ul class="main-nav nav navbar-nav navbar-right" id="main-nav">
                     <li><a href="/">Home</a></li>
+                    <li><a href="/about">About</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
                 
