--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <link rel="icon" type="image/png" href="/favicon.ico?v=1.0.1" />
+    <link rel="icon" type="image/png" href="./static/favicon.ico?v=1.0.1" />
     <meta name="google-site-verification" content="Z6HC-hN3X2QZ3R7IWm6tblZar4bae-VQwLANyhICYOc" />
     <meta name="google-site-verification" content="1Lbth8wmGgjTQ03I8a0ab4Q6wKw5LLIsBqhxmwltIkI" />
 
