--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 Because blockchain's killer app is a smart contract based decentralized Internet country with its own 
                                 cryptocurrencies, universal basic income, ATM network, taxi app, housing app and similar Open Source applications.
                             </p>
-                            <a href="/about/" class="white-btn"><i class="fa fa-info"></i> Read More</a>
+                            <a href="/about" class="white-btn"><i class="fa fa-info"></i> Read More</a>
                             <a href="/apply/" class="main-btn"><i class="fa fa-globe"></i> Apply for Citizenship</a>
                         </div>
                     </div>
