--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                 cryptocurrencies, universal basic income, ATM network, taxi app, housing app and similar Open Source applications.
                             </p>
                             <a href="/about" class="white-btn"><i class="fa fa-info"></i> Read More</a>
-                            <a href="/apply/" class="main-btn"><i class="fa fa-globe"></i> Apply for Citizenship</a>
+                            <a href="https://t.me/Anonutopia" class="main-btn"><i class="fa fa-globe"></i> Apply for Citizenship</a>
                         </div>
                     </div>
                     
