--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="About Anonutopia | Anonutopia - A Smart Contract Country!" />
     <meta property="og:description"        content="About Anonutopia | Anonutopia is a smart contract country (crypto-country) with its own cryptocurrencies, universal basic income, ATM network and taxi, housing and similar apps." />
-    <meta property="og:image"              content="https://www.anonutopia.com./static/img/fb.png?v=1.0.0" />
+    <meta property="og:image"              content="https://www.anonutopia.com/static/img/fb.png?v=1.0.0" />
 
     <script type="text/javascript">
 
