--- a/index.html
+++ b/index.html
@@ -42,15 +42,8 @@
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="Anonutopia - A Smart Contract Country!" />
     <meta property="og:description"        content="Anonutopia is a smart contract country (crypto-country) with its own cryptocurrencies, universal basic income, ATM network and taxi, housing and similar apps." />
-    <meta property="og:image"              content="https://www.anonutopia.com./static/img/fb.png?v=1.0.0" />
+    <meta property="og:image"              content="https://www.anonutopia.com/static/img/fb.png?v=1.0.0" />
 
-    <script type="text/javascript">
-
-        contractAddress = '';
-        contractAbi =  null ;
-        networkVersion =  null ;
-
-    </script>
 </head>
 
 <body>
