Added Anote page

--- a/about.html
+++ b/about.html
@@ -88,6 +88,7 @@
                 <ul class="main-nav nav navbar-nav navbar-right" id="main-nav">
                     <li><a href="/">Home</a></li>
                     <li><a href="/about">About</a></li>
+                    <li><a href="/anote">Anote</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
                 
@@ -228,6 +229,7 @@
                         <div class="widget-category">
                             <a href="/">Home</a>
                             <a href="/about">About</a>
+                            <a href="/anote">Anote</a>
                             <a href="/contact">Contact</a>
                         </div>
                     </div>
