Fixed contact page

--- a/contact.html
+++ b/contact.html
@@ -152,7 +152,7 @@
                         <h3>GitHub</h3>
                         <p><a target="_blank" href="https://github.com/anonutopia">github.com/anonutopia</a></p>
                     </div>
-                </div<
+                </div>
                 
 
                 
