--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 						<i class="fa fa-heart"></i>
 						<h3>Serve the People</h3>
 						<p>We will do what we were made to do by serving those beneath us, we will use our knowledge to help the ones in need.</p>
-						<a href="/projects/">Read More</a>
+						<a href="/about">Read More</a>
 					</div>
 				</div>
 				
