--- a/upsidedownkingdom.html
+++ b/upsidedownkingdom.html
@@ -120,7 +120,7 @@
 
 				
 				<div class="section-header text-center">
-					<h2 class="title">Our Plan</h2>
+					<h2 class="title">His Plan</h2>
 				</div>
 				
 
