--- a/upsidedownkingdom.html
+++ b/upsidedownkingdom.html
@@ -94,7 +94,7 @@
                                 The End starts on September 21th, 2019. Make sure to be one of 144,000 Anonutopia's Saints!
                             </p>
                             <a href="#about" class="white-btn"><i class="fa fa-info"></i> Read More</a>
-                            <a href="https://t.me/Anonutopia" class="main-btn" target="_blank"><i class="fa fa-heart"></i> Become a Saint</a>
+                            <a href="https://t.me/AnonutopiaSaints" class="main-btn" target="_blank"><i class="fa fa-heart"></i> Become a Saint</a>
                         </div>
                     </div>
                     
