--- a/index.html
+++ b/index.html
@@ -329,14 +329,16 @@
     <script type="text/javascript" src="./static/js/main.js?v=1.0.18"></script>
 
     
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113507826-3"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113507826-5"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-        gtag('config', 'UA-113507826-3');
+    gtag('config', 'UA-113507826-5');
     </script>
+
 
 </body>
 
