--- a/about.html
+++ b/about.html
@@ -274,7 +274,7 @@
 
                     
                     <div class="footer-copyright">
-                        <p>Copyright &copy; 2018 <a href="/">Anonutopia</a>.</p>
+                        <p>Copyright &copy; 2020 <a href="/">Anonutopia</a> &amp; <a href="https://www.anontaxi.com/" target="_blank">Besplatna Taxi Aplikacija</a>.</p>
                     </div>
                     
 
