--- a/contact.html
+++ b/contact.html
@@ -201,7 +201,7 @@
 
                     
                     <div class="footer-copyright">
-                        <p>Copyright &copy; 2019 <a href="/">Anonutopia</a>.</p>
+                        <p>Copyright &copy; 2020 <a href="/">Anonutopia</a> &amp; <a href="https://www.anontaxi.com/" target="_blank">Besplatna Taxi Aplikacija</a>.</p>
                     </div>
                     
 
