--- a/anote.html
+++ b/anote.html
@@ -137,7 +137,7 @@
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;Building block for our Dapps
                             </p><br>
 
-                            <h3>How do you make profit with Anote?</h3>
+                            {{/*  <h3>How do you make profit with Anote?</h3>
 
                             <p>There are three simple ways to make profit with Anote:</p>
 
@@ -157,7 +157,7 @@
                             
                             <p>Anote programmatically grows its price when new tokens are generated and 
                             purchased. This provides you with an investment opportunity to buy it, hold it for some 
-                            time and then sell it for profit.</p><br>
+                            time and then sell it for profit.</p><br>  */}}
                         </div>
                     </div>
 
