--- a/anote.html
+++ b/anote.html
@@ -128,13 +128,18 @@
                         <div class="blog-content">
                             <h3>About Anote</h3>
 
-                            <p>Anote is a stadard and transparent Waves token which has more than one function:
+                            <p>Anote is a <a href="https://wavesprotocol.org/" target="_blank">Waves</a> based token, 
+                                similar to <a href="https://minepi.com/" target="_blank">, but with few main differences:
                             </p>
                             
                             <p>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;Our main (crypto) currency<br>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;Decentralized stable coin<br>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;Building block for our Dapps
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it's a Waves based token so it's fully functional 
+                                right from the start - you can send it, receive it, exchange it etc.<br>
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it's mined / minted by subscribing to our Telegram 
+                                ad channels and that's what gives it value right from the start<br>
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it uses Telegram and 
+                                <a href="https://waves.exchange?ref=3PAQasKMCWsofdcCTTEh98KUPz9TGfbJ7CY" target="_blank">Waves wallet</a> 
+                                which are both mature projects so that user can be sure nobody is spying on them
                             </p><br>
 
                             <!-- <h3>How do you make profit with Anote?</h3>
