--- a/anote.html
+++ b/anote.html
@@ -133,13 +133,13 @@
                             </p>
                             
                             <p>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it's a Waves based token so it's fully functional 
-                                right from the start - you can send it, receive it, exchange it etc.<br>
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it's a Waves token so it's fully functional 
+                                right away - you can send it, receive it, exchange it etc.<br>
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;it's mined / minted by subscribing to our Telegram 
-                                ad channels and that's what gives it value right from the start<br>
+                                ad channels and that's what gives it value right away<br>
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;it uses Telegram and 
                                 <a href="https://waves.exchange?ref=3PAQasKMCWsofdcCTTEh98KUPz9TGfbJ7CY" target="_blank">Waves wallet</a> 
-                                which are both mature projects so that user can be sure nobody is spying on them
+                                which are both mature projects so you can be sure nobody is spying
                             </p><br>
 
                             <!-- <h3>How do you make profit with Anote?</h3>
