--- a/anote.html
+++ b/anote.html
@@ -135,8 +135,9 @@
                             <p>
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;it's a Waves token so it's fully functional 
                                 right away - you can send it, receive it, exchange it etc.<br>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it's mined / minted by subscribing to our Telegram 
-                                ad channels and that's what gives it value right away<br>
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it's mined / minted by subscribing to our 
+                                <a href="https://telegram.org/" target="_blank">Telegram</a> ad channels and that's 
+                                what gives it value right away<br>
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;it uses Telegram and 
                                 <a href="https://waves.exchange?ref=3PAQasKMCWsofdcCTTEh98KUPz9TGfbJ7CY" target="_blank">Waves wallet</a> 
                                 which are both mature projects so you can be sure nobody is spying
