--- a/anote.html
+++ b/anote.html
@@ -129,7 +129,7 @@
                             <h3>About Anote</h3>
 
                             <p>Anote is a <a href="https://wavesprotocol.org/" target="_blank">Waves</a> based token, 
-                                similar to <a href="https://minepi.com/" target="_blank">PI</a>, but with few main differences:
+                                similar to <a href="https://minepi.com/" target="_blank">PI</a>, but with few major differences:
                             </p>
                             
                             <p>
