--- a/anote.html
+++ b/anote.html
@@ -141,7 +141,15 @@
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;it uses Telegram and 
                                 <a href="https://waves.exchange?ref=3PAQasKMCWsofdcCTTEh98KUPz9TGfbJ7CY" target="_blank">Waves wallet</a> 
                                 which are both mature projects so you can be sure nobody is spying
-                            </p><br>
+                            </p>
+
+                            <p>It will be expanded with new ways to spend it, it's not just mining and marketing, it's also an 
+                                educational token with a mission to educate people how to use crypto (send, receive, exchange, ...) 
+                                and to show them projects like <a href="https://beta.neutrino.at/" target="_blank">Neutrino</a> 
+                                in order to democratize monetary systems and take monopoly away from them (banks). 
+                                It's designed to bring crypto to ordinary people.</p>
+
+                            <p>It is also a main currency of Anonutopia, smart contract country.</p>
 
                             <!-- <h3>How do you make profit with Anote?</h3>
 
