--- a/anote.html
+++ b/anote.html
@@ -151,7 +151,9 @@
 
                             <p>It is also a main currency of Anonutopia, smart contract country.</p>
 
-                            <h3>How do start with Anote?</h3>
+                            <br>
+
+                            <h3>How to start with Anote?</h3>
 
                             <p>Todo</p>
 
