--- a/anote.html
+++ b/anote.html
@@ -155,7 +155,12 @@
 
                             <h3>How to start with Anote?</h3>
 
-                            <p>Todo</p>
+                            <p>In order to mine, send, receive and sell / exchange Anote, you need these two applications:</p>
+
+                            <p>
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;<a href="https://telegram.org/" target="_blank">Telegram Instant Messenger</a><br>
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;<a href="https://waves.exchange?ref=3PAQasKMCWsofdcCTTEh98KUPz9TGfbJ7CY" target="_blank">Waves Wallet</a>
+                            </p>
 
                         </div>
                     </div>
