anote page update

--- a/anote.html
+++ b/anote.html
@@ -155,12 +155,17 @@
 
                             <h3>How to start with Anote?</h3>
 
-                            <p>In order to mine, send, receive and sell / exchange Anote, you need these two applications:</p>
+                            <p>In order to mine / mint, send, receive and sell / exchange Anote, you need these two applications:</p>
 
                             <p>
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;<a href="https://telegram.org/" target="_blank">Telegram Instant Messenger</a><br>
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;<a href="https://waves.exchange?ref=3PAQasKMCWsofdcCTTEh98KUPz9TGfbJ7CY" target="_blank">Waves Wallet</a>
                             </p>
+
+                            <p>Once you have those two installed either or your mobile phone or on your computer, simply open one of our Telegram 
+                                groups - <a href="https://t.me/Anonutopia" target="_blank">Anonutopia</a> or <a href="https://t.me/AnonutopiaBalkan" target="_blank">AnonutopiaBalkan</a> 
+                                (depending on your location and language) and our friendly Telegram bot <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a>
+                                will lead you through the rest of the process. If you have any questions, please don't hesitate to ask in one of our Telegram groups.</p>
 
                         </div>
                     </div>
