--- a/anote.html
+++ b/anote.html
@@ -167,6 +167,15 @@
                                 (depending on your location and language) and our friendly Telegram bot <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a>
                                 will lead you through the rest of the process. If you have any questions, please don't hesitate to ask in one of our Telegram groups.</p>
 
+                            <br>
+
+                            <h3>How to buy Anote?</h3>
+
+                            <p>If you're not patient enough to mine it, you can always purchase Anote using Waves. Simply send Waves to the address bellow and you'll
+                                automatically receive your anotes according to the current price. Bot address and price can be checked with 
+                                <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a> too.
+                            </p>
+
                         </div>
                     </div>
 
