--- a/anote.html
+++ b/anote.html
@@ -169,12 +169,25 @@
 
                             <br>
 
-                            <h3>How to buy Anote?</h3>
+                            <h3>How to purchase Anote?</h3>
 
                             <p>If you're not patient enough to mine it, you can always purchase Anote using Waves. Simply send Waves to the address bellow and you'll
                                 automatically receive your anotes according to the current price. Bot address and price can be checked with 
-                                <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a> too.
+                                <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a> too. All your Waves will go towards funding Anonutopia and direct democracy.
                             </p>
+
+                            <h4><i class="fa fa-link"></i> Adresa Kriptokune</h4>
+
+                            <div class="well" style="margin-bottom: 40px;">
+                                <p class="text-center" style="margin-bottom: 0; word-break: break-all;">3PJySTACVDWXFFzVFMPSSzAK3XHfDbekHc4</p>
+                            </div>
+
+                            <h4><i class="fa fa-qrcode"></i> Anote QR Code</h4>
+                            <div class="well" style="margin-bottom: 40px;">
+                                <p class="text-center" style="margin-bottom: 0;">
+                                    <img src="./static/img/qrcode.jpg" alt="QR Code Address" style="min-width: 30%;">
+                                </p>
+                            </div>
 
                         </div>
                     </div>
