anote page update

--- a/anote.html
+++ b/anote.html
@@ -175,10 +175,10 @@
                                 automatically receive your anotes according to the current price. Bot address and price can be checked with 
                                 <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a> too. All your Waves will go towards funding Anonutopia and direct democracy.
                             </p>
-                            
+
                             <br>
 
-                            <h4><i class="fa fa-link"></i> Adresa Kriptokune</h4>
+                            <h4><i class="fa fa-link"></i> Anote Waves Address</h4>
 
                             <div class="well" style="margin-bottom: 40px;">
                                 <p class="text-center" style="margin-bottom: 0; word-break: break-all;">3PJySTACVDWXFFzVFMPSSzAK3XHfDbekHc4</p>
