--- a/anote.html
+++ b/anote.html
@@ -187,7 +187,7 @@
                             <h4><i class="fa fa-qrcode"></i> Anote QR Code</h4>
                             <div class="well" style="margin-bottom: 40px;">
                                 <p class="text-center" style="margin-bottom: 0;">
-                                    <img src="./static/img/qrcode.jpg" alt="QR Code Address" style="min-width: 30%;">
+                                    <img src="./static/img/qrcode.jpg" alt="QR Code Address" style="min-width: 30%; width: 100%;">
                                 </p>
                             </div>
 
