--- a/anote.html
+++ b/anote.html
@@ -176,6 +176,10 @@
                                 <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a> too. All your Waves will go towards funding Anonutopia and direct democracy.
                             </p>
 
+                            <p>Before purchasing Anotes directly from Anonutopia which in fact creates new denominations, you should check offers on Waves Exchange 
+                                (wallet). This way, you might purchase them cheaper.
+                            </p>
+
                             <br>
 
                             <h4><i class="fa fa-link"></i> Anote Waves Address</h4>
@@ -190,6 +194,23 @@
                                     <img src="./static/img/qrcode.jpg" alt="QR Code Address" style="min-width: 30%; max-width: 100%;">
                                 </p>
                             </div>
+
+                            <h3>Anote Referral System</h3>
+
+                            <p>Anote has a referral system similar to one PI uses. It's used to build web of trust, but you can also earn with 
+                                it. Every time one of your referred users activates a free Anote, you'll receive 0.5. Also, if they start mining, 
+                                your mining power will increse for 0.05 Anote / hour. So, for example, if you have 5 referred users, your mining 
+                                power will be 0.45 Anote / hour (0.2 for your basic mining and 5 * 0.05 for referrals).
+                            </p>
+
+                            <p>There are two way to refer somebody to Anote / Anonutopia:</p>
+
+                            <p>
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;add them to one of our groups - 
+                                <a href="https://t.me/Anonutopia" target="_blank">Anonutopia</a> or <a href="https://t.me/AnonutopiaBalkan" target="_blank">AnonutopiaBalkan</a><br>
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;send them your referral link which you can get if you enter /status command using 
+                                <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a>
+                            </p>
 
                         </div>
                     </div>
