anote page update

--- a/anote.html
+++ b/anote.html
@@ -212,7 +212,7 @@
                                 <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a>
                             </p>
 
-                            <p>If one of your referred users purchases Anote for Waves (creates new denominations), you get 20% of those Waves.</p>
+                            <p>If one of your referred users purchases Anote for Waves (creates new denominations), you get 20%.</p>
 
                         </div>
                     </div>
