--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 				<div class="col-md-4">
 					<div class="about">
 						<i class="fa fa-users"></i>
-						<h3>Gather the Opressed</h3>
-						<p>Gather the opressed of the world anonymously in the cloud using the unstoppable blockchain technology.</p>
-						<a href="/about">Read More</a>
+						<h3>Gather the People</h3>
+                        <p>Gather likeminded people around a cool new cryptocurrency called Anote and teach them how to use it.</p>
+						<a href="/anote">More on Anote</a>
 					</div>
 				</div>
 				
@@ -146,7 +146,7 @@
 				<div class="col-md-4">
 					<div class="about">
 						<i class="fa fa-heart"></i>
-						<h3>Serve the People</h3>
+						<h3>Kickstart the Economy</h3>
 						<p>We will do what we were made to do by serving those beneath us, we will use our knowledge to help the ones in need.</p>
 						<a href="/about">Read More</a>
 					</div>
