--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 					<div class="about">
 						<i class="fa fa-heart"></i>
 						<h3>Kickstart the Economy</h3>
-						<p>We will do what we were made to do by serving those beneath us, we will use our knowledge to help the ones in need.</p>
-						<a href="/about">Read More</a>
+                        <p>Use Anote to kickstart projects like AnonShout, our ad Telegram channel and other projects to kickstart Anote economy.</p>
+						<a href="/anonshout">More on AnonShout</a>
 					</div>
 				</div>
 				
