--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 					<div class="about">
 						<i class="fa fa-heart"></i>
 						<h3>Kickstart the Economy</h3>
-                        <p>Use Anote to kickstart projects like AnonShout, our ad Telegram channel and other projects to kickstart Anote economy.</p>
+                        <p>Use Anote to kickstart projects like AnonShout (ad Telegram channel) and similar to kickstart Anote economy.</p>
 						<a href="/anonshout">More on AnonShout</a>
 					</div>
 				</div>
