--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 				
 				<div class="col-md-4">
 					<div class="about">
-						<i class="fa fa-heart"></i>
+						<i class="fa fa-line-chart"></i>
 						<h3>Kickstart the Economy</h3>
                         <p>Use Anote to kickstart projects like AnonShout (ad Telegram channel) and similar to kickstart Anote economy.</p>
 						<a href="/anonshout">More on AnonShout</a>
