--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
 				
 				<div class="col-md-4">
 					<div class="about">
-						<i class="fa fa-sun-o"></i>
-						<h3>Unleash the Humanity</h3>
-						<p>After establishing peace, love and freedom the humanity will reach the state it was meant to reach - the divine state.</p>
-						<a href="/about">Read more</a>
+						<i class="fa fa-globa"></i>
+						<h3>Provide the Alternative</h3>
+						<p>Provide the alternative to current countries, banking and monetary systems and economy in general.</p>
+						<a href="/about">More on Anonutopia</a>
 					</div>
 				</div>
 				
