--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 				
 				<div class="col-md-4">
 					<div class="about">
-						<i class="fa fa-globa"></i>
+						<i class="fa fa-globe"></i>
 						<h3>Provide the Alternative</h3>
 						<p>Provide the alternative to current countries, banking and monetary systems and economy in general.</p>
 						<a href="/about">More on Anonutopia</a>
