--- a/anonshout.html
+++ b/anonshout.html
@@ -10,8 +10,8 @@
     <meta name="google-site-verification" content="Z6HC-hN3X2QZ3R7IWm6tblZar4bae-VQwLANyhICYOc" />
     <meta name="google-site-verification" content="1Lbth8wmGgjTQ03I8a0ab4Q6wKw5LLIsBqhxmwltIkI" />
 
-    <title>What is Anote? | Anonutopia - A Smart Contract Country</title>
-    <meta name="description" content="What is Anote? | Anonutopia is a smart contract country (crypto-country or decentralized autonomous country) with its own currencies, universal basic income and other projects."/>
+    <title>What is AnonShout? | Anonutopia - A Smart Contract Country</title>
+    <meta name="description" content="What is AnonShout? | Anonutopia is a smart contract country (crypto-country or decentralized autonomous country) with its own currencies, universal basic income and other projects."/>
 
     
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
@@ -38,8 +38,8 @@
 
     <meta property="og:url"                content="https://www.anonutopia.com/anote/" />
     <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="What is Anote? | Anonutopia - A Smart Contract Country!" />
-    <meta property="og:description"        content="What is Anote? | Anonutopia is a smart contract country (crypto-country) with its own cryptocurrencies, universal basic income, ATM network and taxi, housing and similar apps." />
+    <meta property="og:title"              content="What is AnonShout? | Anonutopia - A Smart Contract Country!" />
+    <meta property="og:description"        content="What is AnonShout? | Anonutopia is a smart contract country (crypto-country) with its own cryptocurrencies, universal basic income, ATM network and taxi, housing and similar apps." />
     <meta property="og:image"              content="https://www.anonutopia.com/static/img/fb.png?v=1.0.0" />
 
     <script type="text/javascript">
@@ -99,10 +99,10 @@
         
         <div class="header-wrapper sm-padding bg-dark">
             <div class="container">
-                <h2>What is Anote?</h2>
+                <h2>What is AnonShout?</h2>
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/">Home</a></li>
-                    <li class="breadcrumb-item active">Anote</li>
+                    <li class="breadcrumb-item active">AnonShout</li>
                 </ul>
             </div>
         </div>
