--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/about">About</a></li>
                     <li><a href="/anote">Anote</a></li>
+                    <li><a href="/anonshout">AnonShout</a></li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
                 
