--- a/anote.html
+++ b/anote.html
@@ -232,6 +232,7 @@
                             <a href="/">Home</a>
                             <a href="/about">About</a>
                             <a href="/anote">Anote</a>
+                            <a href="/anonshout">AnonShout</a>
                             <a href="/contact">Contact</a>
                         </div>
                     </div>
