--- a/anonshout.html
+++ b/anonshout.html
@@ -129,7 +129,8 @@
                         <div class="blog-content">
                             <h3>About AnonShout</h3>
 
-                            <p>todo</p>
+                            <p><a href="https://t.me/AnonShout">AnonShout</a> is our network of Telegram ad channels which give <a href="/anote">Anote</a> its value 
+                            because ads on the network can only be purchased with anotes.</p>
                         </div>
                     </div>
 
