--- a/anonshout.html
+++ b/anonshout.html
@@ -128,9 +128,20 @@
                         </div>
                         <div class="blog-content">
                             <h3>About AnonShout</h3>
+                            <p><a href="https://t.me/AnonShout">AnonShout</a> is our network of Telegram ad channels that give <a href="/anote">Anote</a> its value 
+                            because ads on the network can only be purchased with anotes and new anotes are minted (generated) by watching ads.</p>
 
-                            <p><a href="https://t.me/AnonShout">AnonShout</a> is our network of Telegram ad channels which give <a href="/anote">Anote</a> its value 
-                            because ads on the network can only be purchased with anotes.</p>
+                            <h4><i class="fa fa-link"></i> AnonShout Waves Address</h4>
+                            <div class="well" style="margin-bottom: 40px;">
+                                <p class="text-center" style="margin-bottom: 0; word-break: break-all;">3PQiS5wzStTuoVuPWrgN7HcDoVYC8SSask3</p>
+                            </div>
+
+                            <h4><i class="fa fa-qrcode"></i> AnonShout QR Code</h4>
+                            <div class="well" style="margin-bottom: 40px;">
+                                <p class="text-center" style="margin-bottom: 0;">
+                                    <img src="./static/img/qrcode.jpg" alt="QR Code Address" style="min-width: 30%; max-width: 100%;">
+                                </p>
+                            </div>
                         </div>
                     </div>
 
