--- a/anonshout.html
+++ b/anonshout.html
@@ -128,8 +128,8 @@
                         </div>
                         <div class="blog-content">
                             <h3>About AnonShout</h3>
-                            <p><a href="https://t.me/AnonShout">AnonShout</a> is our network of Telegram ad channels that give <a href="/anote">Anote</a> its value 
-                            because ads on the network can only be purchased with anotes and new anotes are minted (generated) by watching ads.</p>
+                            <p><a href="https://t.me/AnonShout">AnonShout</a> is our network of Telegram ad channels that give <a href="/anote">Anote</a> 
+                            its value because ads on the network can only be purchased with anotes and new anotes are minted (generated) by watching ads.</p>
 
                             <h4><i class="fa fa-link"></i> AnonShout Waves Address</h4>
                             <div class="well" style="margin-bottom: 40px;">
