--- a/anonshout.html
+++ b/anonshout.html
@@ -130,6 +130,8 @@
                             <h3>About AnonShout</h3>
                             <p><a href="https://t.me/AnonShout">AnonShout</a> is our network of Telegram ad channels that give <a href="/anote">Anote</a> 
                             its value because ads on the network can only be purchased with anotes and new anotes are minted (generated) by watching ads.</p>
+                            <p style="margin-bottom: 40px;">You can bid for ads on AnonShout by sending anotes to the address bellow, but you need to be 
+                            registered with AnonsRobot.</p>
 
                             <h4><i class="fa fa-link"></i> AnonShout Waves Address</h4>
                             <div class="well" style="margin-bottom: 40px;">
