--- a/anonshout.html
+++ b/anonshout.html
@@ -141,7 +141,7 @@
                             <h4><i class="fa fa-qrcode"></i> AnonShout QR Code</h4>
                             <div class="well" style="margin-bottom: 40px;">
                                 <p class="text-center" style="margin-bottom: 0;">
-                                    <img src="./static/img/shoutqrcode.jpg" alt="QR Code Address" style="min-width: 30%; max-width: 100%;">
+                                    <img src="./static/img/shoutqrcode.png" alt="QR Code Address" style="min-width: 30%; max-width: 100%;">
                                 </p>
                             </div>
                         </div>
