--- a/about.html
+++ b/about.html
@@ -84,10 +84,24 @@
 
                 
                 <ul class="main-nav nav navbar-nav navbar-right" id="main-nav">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/anote">Anote</a></li>
-                    <li><a href="/anonshout">AnonShout</a></li>
+					<li><a href="/">Home</a></li>
+					<li><a href="/about">About</a></li>
+                    <li class="has-dropdown">
+                        <a href="/anote">Anote</a>
+                        <ul class="dropdown">
+                            <li><a href="/mine">Mining Tutorial</a></li>
+                            <li><a href="/purchase">Purchasing Tutorial</a></li>
+                            <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
+                            <li><a href="/anonshout">AnonShout Tutorial</a></li>
+                        </ul>
+                    </li>
+                    <li class="has-dropdown">
+                        <a href="/projects">Projects</a>
+                        <ul class="dropdown">
+                            <li><a href="https://www.kriptokuna.com/" target="_blank">Kriptokuna</a></li>
+                            <li><a href="https://www.anontaxi.com/" target="_blank">AnonTaxi</a></li>
+                        </ul>
+                    </li>
                     <li><a href="/contact">Contact</a></li>
                 </ul>
                 
