--- a/anonshout.html
+++ b/anonshout.html
@@ -172,11 +172,11 @@
                     <div class="widget">
                         <h3 class="title">Menu</h3>
                         <div class="widget-category">
-                            <a href="/">Home</a>
-                            <a href="/about">About</a>
-                            <a href="/anote">Anote</a>
-                            <a href="/anonshout">AnonShout</a>
-                            <a href="/contact">Contact</a>
+                            <a href="/anote">About Anote</a>
+                            <a href="/mine">How to Mine?</a>
+                            <a href="/purchase">How to Purchase?</a>
+                            <a href="/anonshout">How to Use AnonsRobot?</a>
+                            <a href="/anonsrobot">How to Use AnonShout?</a>
                         </div>
                     </div>
                     
