--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
                     
                     <div class="col-md-10 col-md-offset-1 text-center">
                         <div class="home-content">
-                            <h2 class="white-text">Claim Your 1 Free ANOTE</h2>
+                            <h2 class="white-text">Claim Your 1 Free Anote</h2>
                             <p class="white-text" style="margin-bottom: 30px;">
-                                In order to claim your free ANOTE, join our Telegram group and ask our friendly bot for it.<br>
+                                In order to claim your free Anote, join our Telegram group and ask our friendly bot for it.<br>
                                 Click the button bellow to find out more!
                             </p>
-                            <a href="https://t.me/Anonutopia" class="main-btn"><i class="fa fa-dollar"></i> Claim 1 Free ANOTE</a>
+                            <a href="https://t.me/Anonutopia" class="main-btn"><i class="fa fa-dollar"></i> Claim 1 Free Anote</a>
                         </div>
                     </div>
                     
@@ -239,7 +239,7 @@
 					<div class="section-header">
 						<h2 class="title">Fund Direct Democracy</h2>
 					</div>
-                    <p>By purchasing ANOTE you're in fact crowdfunding a pure direct democracy project - Anonutopia. We will use this money to:</p>
+                    <p>By purchasing Anote you're in fact crowdfunding a pure direct democracy project - Anonutopia. We will use this money to:</p>
                     <div class="feature">
 						<i class="fa fa-check"></i>
 						<p>Attract more citizens</p>
