--- a/purchase.html
+++ b/purchase.html
@@ -145,7 +145,7 @@
                             <h3>How to purchase Anote?</h3>
 
                             <p>If you're not patient enough to mine it, you can always purchase Anote using Waves. Simply send Waves to the address bellow and you'll
-                                automatically receive your anotes according to the current price. Bot address and price can be checked with 
+                                automatically receive your anotes according to the current price. Both address and price can be checked with 
                                 <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a> too. All your Waves will go towards funding Anonutopia and direct democracy.
                             </p>
 
