--- a/mine.html
+++ b/mine.html
@@ -151,11 +151,18 @@
                                 <i class="fa fa-gear"></i>&nbsp;&nbsp;<a href="https://waves.exchange?ref=3PAQasKMCWsofdcCTTEh98KUPz9TGfbJ7CY" target="_blank">Waves Wallet</a>
                             </p>
 
-                            <p>Once you have those two installed either or your mobile phone or on your computer, simply open one of our Telegram 
+                            <p>Once you have these two installed either or your mobile phone or on your computer, simply open one of our Telegram 
                                 groups - <a href="https://t.me/Anonutopia" target="_blank">Anonutopia</a> or <a href="https://t.me/AnonutopiaBalkan" target="_blank">AnonutopiaBalkan</a> 
                                 (depending on your location and language) and our friendly Telegram bot <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a>
                                 will lead you through the rest of the process. If you have any questions, please don't hesitate to ask in one of our Telegram groups.
                             </p>
+
+                            <p>The process is simple. You get subscribed to <a href="https://t.me/AnonShout" target="_blank">AnonShout</a> Telegram channel 
+                            where we show ads on a daily basis, together with a mining code. After you've seen the add, you call /mine command with 
+                            <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a> and provide it the daily mining code. And that's it, next day 
+                            you repeat the process.</p>
+
+                            <p>You can read more on how to use AnonsRobot <a href="/anonsrobot">here</a> and AnonShout <a href="/anonshout">here</a>.</p>
 
                         </div>
                     </div>
