website - mining power

--- a/mine.html
+++ b/mine.html
@@ -164,6 +164,28 @@
 
                             <p>You can read more on how to use AnonsRobot <a href="/anonsrobot">here</a> and AnonShout <a href="/anonshout">here</a>.</p>
 
+                            <h4><i class="fa fa-bolt"></i> Mining Power</h4>
+
+                            <p>Your mining power depends on your Anonutopia community activity. Basic mining power is 0.02 anotes per hour (A/h) and you get 
+                            an additional 0.005 A/h for every referred user.
+                            </p>
+
+                            <p><strong><u>If you add 3 or more users, you become "Miner" and your mining power gets multiplied by 10.</u></strong></p>                            
+
+                            <p>So, for example,if you have 5 referred users, your basic mining power is 0.02 and you add 5 * 0.005 to that. 
+                            You get 0.045 and since you have more than 3 referred users, it gets multiplied by 10 so your final mining 
+                            power becomes 0.45 anotes per hour.
+                            </p>
+
+                            <p>There are two way to refer somebody to Anote / Anonutopia:</p>
+
+                            <p>
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;add them to one of our groups - 
+                                <a href="https://t.me/Anonutopia" target="_blank">Anonutopia</a> or <a href="https://t.me/AnonutopiaBalkan" target="_blank">AnonutopiaBalkan</a><br>
+                                <i class="fa fa-gear"></i>&nbsp;&nbsp;send them your referral link which you can get if you enter /status command using 
+                                <a href="https://t.me/AnonsRobot" target="_blank">AnonsRobot</a>
+                            </p>
+
                         </div>
                     </div>
 
